{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 967,
  "lineage": "3275522b-2d2a-c1c7-d3ed-dbed0a5fb130",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060966046a179cfc4",
            "association_id": "eipassoc-03f3375d6ffe7e1a8",
            "domain": "vpc",
            "id": "eipalloc-060966046a179cfc4",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0190e1c969c84b867",
            "private_dns": "ip-10-0-1-69.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-35-78-13-174.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.78.13.174",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756c676d8b8b5dfa",
            "association_id": "eipassoc-081b64c469cfe13aa",
            "domain": "vpc",
            "id": "eipalloc-0756c676d8b8b5dfa",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0d0938bee3a664969",
            "private_dns": "ip-10-0-2-221.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.221",
            "public_dns": "ec2-52-199-92-25.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.92.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:internet-gateway/igw-0fc0b9c9df5c75e4f",
            "id": "igw-0fc0b9c9df5c75e4f",
            "owner_id": "893095117949",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic-terraform-2022-04-26",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:loadbalancer/app/example/c0a6990fea921da0",
            "arn_suffix": "app/example/c0a6990fea921da0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-1056511935.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:loadbalancer/app/example/c0a6990fea921da0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "security_groups": [
              "sg-02266cc1023887080",
              "sg-0834cf0d297fdde52",
              "sg-0b1a89cc7deff5fd4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00aa91e16942b7813"
              },
              {
                "subnet_id": "subnet-0b4f07c1c558cdbd7"
              }
            ],
            "subnets": [
              "subnet-00aa91e16942b7813",
              "subnet-0b4f07c1c558cdbd7"
            ],
            "vpc_id": "vpc-04d9c4aa904b8c925",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/4c8aac28f933474c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "this is http",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/4c8aac28f933474c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:loadbalancer/app/example/c0a6990fea921da0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/f1a140124ec14abc",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:893095117949:certificate/f42dcf77-a4f7-4ecd-ab7c-3862b1d4eadd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "this is https",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/f1a140124ec14abc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:loadbalancer/app/example/c0a6990fea921da0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_acm_certificate_validation.example",
            "aws_lb.example",
            "aws_route53_record.example",
            "aws_route53_record.example_certificate",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/7e1f739d346c2197",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "#{port}",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/7e1f739d346c2197",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:loadbalancer/app/example/c0a6990fea921da0",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:targetgroup/example/e48500972dc2a0c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener-rule/app/example/c0a6990fea921da0/f1a140124ec14abc/d6bf9128729a22eb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener-rule/app/example/c0a6990fea921da0/f1a140124ec14abc/d6bf9128729a22eb",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:listener/app/example/c0a6990fea921da0/f1a140124ec14abc",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_acm_certificate_validation.example",
            "aws_lb.example",
            "aws_lb_listener.https",
            "aws_lb_target_group.example",
            "aws_route53_record.example",
            "aws_route53_record.example_certificate",
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "aws_vpc.example",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:targetgroup/example/e48500972dc2a0c5",
            "arn_suffix": "targetgroup/example/e48500972dc2a0c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:893095117949:targetgroup/example/e48500972dc2a0c5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060966046a179cfc4",
            "connectivity_type": "public",
            "id": "nat-0c383a1061f40ba2f",
            "network_interface_id": "eni-0190e1c969c84b867",
            "private_ip": "10.0.1.69",
            "public_ip": "35.78.13.174",
            "subnet_id": "subnet-00aa91e16942b7813"
          },
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756c676d8b8b5dfa",
            "connectivity_type": "public",
            "id": "nat-019182f46d50e321b",
            "network_interface_id": "eni-0d0938bee3a664969",
            "private_ip": "10.0.2.221",
            "public_ip": "52.199.92.25",
            "subnet_id": "subnet-0b4f07c1c558cdbd7"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc0b9c9df5c75e4f",
            "id": "r-rtb-0480d2b3ea4d2ec251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0480d2b3ea4d2ec25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.public",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02185333651cfd2da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c383a1061f40ba2f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02185333651cfd2da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-003b3020753a612361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019182f46d50e321b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003b3020753a61236",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:route-table/rtb-02185333651cfd2da",
            "id": "rtb-02185333651cfd2da",
            "owner_id": "893095117949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c383a1061f40ba2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:route-table/rtb-003b3020753a61236",
            "id": "rtb-003b3020753a61236",
            "owner_id": "893095117949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019182f46d50e321b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:route-table/rtb-0480d2b3ea4d2ec25",
            "id": "rtb-0480d2b3ea4d2ec25",
            "owner_id": "893095117949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc0b9c9df5c75e4f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4920dca2f7bdfe3",
            "route_table_id": "rtb-02185333651cfd2da",
            "subnet_id": "subnet-086ad5bf052c9b4e5"
          },
          "dependencies": [
            "aws_route_table.private_0",
            "aws_subnet.private_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001f9af1d2cb00120",
            "route_table_id": "rtb-003b3020753a61236",
            "subnet_id": "subnet-05dae4896ec082e5b"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2b774f7b3182774",
            "route_table_id": "rtb-0480d2b3ea4d2ec25",
            "subnet_id": "subnet-00aa91e16942b7813"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_0",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03df98f5d37dbb4a9",
            "route_table_id": "rtb-0480d2b3ea4d2ec25",
            "subnet_id": "subnet-0b4f07c1c558cdbd7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:subnet/subnet-086ad5bf052c9b4e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086ad5bf052c9b4e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893095117949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:subnet/subnet-05dae4896ec082e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dae4896ec082e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893095117949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:subnet/subnet-00aa91e16942b7813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aa91e16942b7813",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893095117949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:subnet/subnet-0b4f07c1c558cdbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f07c1c558cdbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "893095117949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:vpc/vpc-04d9c4aa904b8c925",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093dc75749317ee68",
            "default_route_table_id": "rtb-084f245cb8a8f67d3",
            "default_security_group_id": "sg-07c6947ba5b7099c4",
            "dhcp_options_id": "dopt-0a0fc12b8b2507d99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d9c4aa904b8c925",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084f245cb8a8f67d3",
            "owner_id": "893095117949",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:security-group/sg-0834cf0d297fdde52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0834cf0d297fdde52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http_redirect_sg",
            "name_prefix": "",
            "owner_id": "893095117949",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1337801865",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0834cf0d297fdde52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3925989828",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0834cf0d297fdde52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_redirect_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:security-group/sg-0b1a89cc7deff5fd4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1a89cc7deff5fd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_sg",
            "name_prefix": "",
            "owner_id": "893095117949",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-492384495",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b1a89cc7deff5fd4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3131169960",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1a89cc7deff5fd4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.http_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:security-group/sg-02266cc1023887080",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02266cc1023887080",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https_sg",
            "name_prefix": "",
            "owner_id": "893095117949",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-824835020",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02266cc1023887080",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1965922163",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02266cc1023887080",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.https_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:security-group/sg-0580cac46aa8ac7b1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0580cac46aa8ac7b1",
            "ingress": [],
            "name": "mysql_sg",
            "name_prefix": "",
            "owner_id": "893095117949",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3076527531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0580cac46aa8ac7b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.mysql_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.mysql_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1848318636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0580cac46aa8ac7b1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.mysql_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:893095117949:security-group/sg-02321de1d93215ba7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02321de1d93215ba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "893095117949",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9c4aa904b8c925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3477850637",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02321de1d93215ba7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4095102151",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02321de1d93215ba7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example",
            "module.nginx_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}